# nba-expression-synthesis

./: .gitignore  README.md  compute.py  environment.yml  pyproject.toml  solve.py
formulas/: example.ltl  merged.ltl
formulas/splits/: merged1.ltl  merged2.ltl  merged3.ltl  merged4.ltl
results/: merged_ltl_properties.csv  merged_ltl_state_counts.csv  merged_metrics.csv
scripts/: count_states.py  fill_states.py  ltl_properties.py
src/nba_expression_synthesis/: __init__.py  regex_methods.py
src/nba_expression_synthesis/syntax/: __init__.py  omega_regex.py  regex_utils.py
src/nba_expression_synthesis/synthesis/: __init__.py  graph.py  transition_graph_pipeline.py  transition_graph_to_regex.py
